--- a/index/static/loading.html
+++ b/index/static/loading.html
@@ -1,4 +1,4 @@
-<div class='col-auto results-loading'>
+<div class='col-auto results-loading color-5-trans'>
   <div class="loading">
     <span class="loading-a loading-a-1">&#9679;</span>
     <span class="loading-b loading-b-1">d</span>
