--- a/index/static/circle-loading.html
+++ b/index/static/circle-loading.html
@@ -1,4 +1,4 @@
-<div class="splash-logo noselect color-3">
+<div class="circle-loading noselect">
   <span class="char char-1">d</span>
   <span class="char char-2">o</span>
   <span class="char char-3">p</span>
